# napi-rs

./: Cargo.toml  bench.txt  binding.h  binding.rs  package.json  test.js  x64-binding.rs
.cargo/: cargo.toml  config.toml
.github/workflows/: windows-i686.yml
bench/: async.ts  bench.ts  query.ts  ser.ts
bench/src/: async_compute.rs  lib.rs  query.rs
cli/src/: build.ts
crates/backend/src/codegen/: const.rs  enum.rs  fn.rs  struct.rs
crates/macro/src/: lib.rs
crates/napi/src/: env.rs  error.rs  lib.rs  status.rs  threadsafe_function.rs  value_type.rs
crates/napi/src/bindgen_runtime/: callback_info.rs  error.rs  js_values.rs  module_register.rs
crates/napi/src/bindgen_runtime/js_values/: array.rs  bigint.rs  boolean.rs  buffer.rs  either.rs  map.rs  nil.rs  number.rs  object.rs  promise.rs  serde.rs  string.rs  symbol.rs  task.rs
crates/napi/src/js_values/: arraybuffer.rs  bigint.rs  buffer.rs  function.rs  mod.rs  object.rs  object_property.rs
crates/napi/src/js_values/string/: mod.rs
crates/sys/src/: lib.rs
examples/napi/: index.d.ts
examples/napi/__test__/: typegen.spec.ts.md  typegen.spec.ts.snap  values.spec.ts
examples/napi/src/: enum.rs  lib.rs  object.rs
napi/: Cargo.toml
napi/src/: env.rs  lib.rs  stream.rs  tokio_rt.rs
serializer/: Cargo.toml
serializer-wasm/: Cargo.toml
serializer-wasm/src/: lib.rs
serializer/src/: lib.rs
