[package]
edition = "2018"
name = "napi-serializer"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = {path = "../napi", features = ["serde-json"]}
napi-derive = {path = "../napi-derive"}
once_cell = "1"
rkyv = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
